--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -27,6 +28,6 @@
     "vite": "^7.0.4"
   },
   "engines": {
-	"node": "^22.12.0"
+    "node": "^22.12.0"
   }
 }
